--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -10,11 +10,16 @@ jobs:
     name: create-release
     runs-on: ubuntu-latest
     steps:
+      - name: Dump env
+        run: env | sort
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
       - name: Create artifacts directory
         run: mkdir artifacts
-      - name: Get the version
-        id: get_version
-        run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+      - name: Set env
+        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
       - name: Create GitHub release
         id: release
         uses: actions/create-release@v1
