Add from_str impl for gff.

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -10,6 +10,12 @@ jobs:
     name: create-release
     runs-on: ubuntu-latest
     steps:
+      - name: Dump env
+        run: env | sort
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
       - name: Create artifacts directory
         run: mkdir artifacts
       - name: Create GitHub release
