--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -18,19 +18,21 @@ jobs:
         run: echo "$GITHUB_CONTEXT"
       - name: Create artifacts directory
         run: mkdir artifacts
+      - name: Set env
+        run: echo ::set-env name=VERSION::${GITHUB_REF#refs/tags/}
       - name: Create GitHub release
         id: release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.event.release.tag_name }}
-          release_name: ${{ github.event.release.tag_name }}
+          tag_name: ${{ env.VERSION }}
+          release_name: ${{ env.VERSION }}
           draft: true
       - name: Save release upload URL to artifact
         run: echo "${{ steps.release.outputs.upload_url }}" > artifacts/release-upload-url
       - name: Save version number to artifact
-        run: echo "${{ github.event.release.tag_name }}" > artifacts/release-version
+        run: echo "${{ env.VERSION }}" > artifacts/release-version
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v1
