--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ path = "src/main.rs"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-bio = "0.31.0"
+bio = { git = "https://github.com/rust-bio/rust-bio" }
 structopt = { version = "0.3", default-features = false }
