--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -55,6 +55,10 @@ jobs:
             os: ubuntu-18.04
             rust: nightly
             target: x86_64-unknown-linux-musl
+          - build: linux
+            os: ubuntu-18.04
+            rust: nightly
+            target: aarch64-unknown-linux-gnu
     steps:
       - name: Install Tasks
         uses: Arduino/actions/setup-taskfile@master
@@ -67,7 +71,7 @@ jobs:
           fetch-depth: 1
 
       - name: Install linux depedencies
-        if: matrix.build == 'linux'
+        if: matrix.target == 'x86_64-unknown-linux-musl'
         run: |
           sudo apt-get update
           sudo apt-get install -y --no-install-recommends musl-tools
