--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bio = { git = "https://github.com/rust-bio/rust-bio" }
 structopt = { version = "0.3", default-features = false }
+
+[dev-dependencies]
+assert_cmd = "1.0.1"
