--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -10,6 +10,9 @@ tasks:
   prod-release:
     cmds:
       - cross build --release --target {{.TARGET}}
+  test:
+    cmds:
+      - cargo test
   gh-release:
     cmds:
       - docker-compose build hub
