--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,5 @@ structopt = { version = "0.3", default-features = false }
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
+criterion = "0.3"
+tempfile = "3"
