--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ path = "src/main.rs"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bio = { git = "https://github.com/rust-bio/rust-bio" }
-structopt = { version = "0.3", default-features = false }
+clap = "3.0.0-beta.2"
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
