--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bio = { git = "https://github.com/rust-bio/rust-bio" }
 clap = "3.0.0-beta.2"
+clap_generate = { version = "3.0.0-beta.2" }
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
