--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -45,7 +45,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        build: [macos-x86, linux-x86, linux-arm]
+        build: [macos-x86, linux-x86, linux-arm, win-msvc]
         include:
           - build: macos-x86
             os: macos-latest
@@ -59,6 +59,10 @@ jobs:
             os: ubuntu-18.04
             rust: nightly
             target: aarch64-unknown-linux-gnu
+          - build: win-msvc
+            os: windows-2019
+            rust: nightly
+            target: x86_64-pc-windows-msvc
     steps:
       - name: Install Tasks
         uses: Arduino/actions/setup-taskfile@master
@@ -110,12 +114,22 @@ jobs:
         shell: bash
         run: |
           release_upload_url="$(cat artifacts/release-upload-url)"
-          echo "::set-env name=RELEASE_UPLOAD_URL::$release_upload_url"
-          echo "release upload url: $RELEASE_UPLOAD_URL"
+          echo "RELEASE_UPLOAD_URL=${release_upload_url}" >> $GITHUB_ENV
 
           release_version="$(cat artifacts/release-version)"
-          echo "::set-env name=RELEASE_VERSION::$release_version"
-          echo "release version: $RELEASE_VERSION"
+          echo "RELEASE_VERSION=${release_version}" >> $GITHUB_ENV
+
+          if [ "${{ matrix.os }}" = "windows-2019" ]; then
+              target_path="target/${{ matrix.target }}/release/brrrr.exe"
+              asset_name="brrrr-${{ env.RELEASE_VERSION }}-${{ matrix.target }}.exe"
+          else
+              target_path="target/${{ matrix.target }}/release/brrrr"
+              asset_name="brrrr-${{ env.RELEASE_VERSION }}-${{ matrix.target }}"
+          fi
+
+          echo "TARGET_PATH=${target_path}" >> $GITHUB_ENV
+          echo "ASSET_NAME=${asset_name}" >> $GITHUB_ENV
+          env | sort
 
       - name: Upload Release Asset
         id: upload-release-asset
@@ -124,6 +138,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ env.RELEASE_UPLOAD_URL }}
-          asset_path: "target/${{ matrix.target }}/release/brrrr"
-          asset_name: "brrrr-${{ env.RELEASE_VERSION }}-${{ matrix.target }}"
+          asset_path: ${{ env.TARGET_PATH }}
+          asset_name: ${{ env.ASSET_NAME }}
           asset_content_type: application/octet-stream
