--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        build: [macos-x86, linux-x86, linux-arm]
+        build: [macos-x86, linux-x86, linux-arm, win-msvc]
         include:
           - build: macos-x86
             os: macos-latest
@@ -23,6 +23,10 @@ jobs:
             os: ubuntu-18.04
             rust: nightly
             target: aarch64-unknown-linux-gnu
+          - build: win-msvc
+            os: windows-2019
+            rust: nightly
+            target: x86_64-pc-windows-msvc
     steps:
       - name: Install Tasks
         uses: Arduino/actions/setup-taskfile@master
