--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ serde_json = "1.0"
 bio = { git = "https://github.com/rust-bio/rust-bio" }
 clap = "3.0.0-beta.2"
 clap_generate = { version = "3.0.0-beta.2" }
+parquet = { git = "https://github.com/apache/arrow" }
+arrow = { git = "https://github.com/apache/arrow" }
+itertools = "0.9.0"
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
