feat(schema): include description in both fasta and fastq parquet

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -33,8 +33,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        #build: [macos-x86, linux-x86, linux-arm, win-msvc]
-        build: [macos-x86]
+        build: [macos-x86, linux-x86, linux-arm, win-msvc]
         include:
           - build: macos-x86
             os: macos-latest
