--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ clap_generate = { version = "3.0.0-beta.2" }
 parquet = { git = "https://github.com/apache/arrow" }
 arrow = { git = "https://github.com/apache/arrow" }
 itertools = "0.9.0"
+tokenizers = { git = "https://github.com/huggingface/tokenizers"}
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
