--- a/.cz.toml
+++ b/.cz.toml
@@ -3,6 +3,7 @@ name = "cz_conventional_commits"
 version = "0.7.4"
 tag_format = "v$version"
 version_files = [
-  "./Cargo.toml:version",
-  "./src/main.rs:version"
+  "./brrrr/Cargo.toml:version",
+  "./brrrr/src/main.rs:version"
+  "./brrrr-lib/Cargo.toml:version",
 ]
