--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,27 +1,6 @@
-[package]
-name = "brrrr"
-version = "0.7.4"
-authors = ["Trent Hauck <trent@trenthauck.com>"]
-edition = "2018"
+[workspace]
 
-[[bin]]
-name = "brrrr"
-path = "src/main.rs"
-
-[dependencies]
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-bio = { git = "https://github.com/rust-bio/rust-bio" }
-clap = "3.0.0-beta.2"
-clap_generate = { version = "3.0.0-beta.2" }
-parquet = { git = "https://github.com/apache/arrow" }
-arrow = { git = "https://github.com/apache/arrow" }
-itertools = "0.9.0"
-
-[dev-dependencies]
-assert_cmd = "1.0.1"
-criterion = "0.3"
-
-[[bench]]
-name = "read_fasta"
-harness = false
+members = [
+    "brrrr",
+    "brrrr-lib"
+]
