--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
+          file: ./brrrr/Dockerfile
           platforms: linux/386,linux/amd64,linux/arm64
           push: true
           tags: |
