--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           context: .
           file: ./brrrr/Dockerfile
-          platforms: linux/386,linux/amd64,linux/arm64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             thauck/brrrr:latest
