feat: uses reference as opposed to value for writer
Passing by value caused issues for cases where the underlying object does not implement the Copy trait, because once passed inside the function scope it would be owned by that function.

--- a/brrrr-lib/Cargo.toml
+++ b/brrrr-lib/Cargo.toml
@@ -18,3 +18,7 @@ criterion = "0.3"
 [[bench]]
 harness = false
 name = "read_fasta"
+
+[[example]]
+name = "hello_world_parquet"
+path = "examples/fa2jsonl.rs"
