--- a/brrrr-lib/Cargo.toml
+++ b/brrrr-lib/Cargo.toml
@@ -5,10 +5,10 @@ name = "brrrr-lib"
 version = "0.9.0"
 
 [dependencies]
-arrow = {git = "https://github.com/apache/arrow"}
 bio = {git = "https://github.com/rust-bio/rust-bio"}
 itertools = "0.9.0"
-parquet = {git = "https://github.com/apache/arrow"}
+parquet = "5.2.0"
+arrow = "5.2.0"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 
